changed background img & the h2 again

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ hr {
   border: 1px solid #006400;
   max-width: 650px;
   border-radius: 4px;
-  background-image: url(https://cdn.pixabay.com/photo/2014/07/06/20/27/watercolor-385841_1280.jpg);
+  background-image: url(watcol1.png);
 }
 
 .btn-sm {
